<resources>
    <string name="app_name">Attendance System (Hotspot Based)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mac_address">WiFi Mac Address</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_sign_up">Not Registered ? Sign Up</string>
    <string name="action_help">Help</string>
    <string name="action_sign_up_in_short">Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_college_id">College ID</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="prompt_year">Year</string>
    <string name="fy">F.Y. BTech.</string>
    <string name="sy">S.Y. Btech.</string>
    <string name="ty">T.Y. Btech.</string>
    <string name="finaly">Final Y. Btech.</string>

    <string name="prompt_branch">Branch</string>
    <string name="civil">Civil Engineering</string>
    <string name="mechanical">Mechanical Engineering</string>
    <string name="electrical">Electrical Engineering</string>
    <string name="production">Production Engineering</string>
    <string name="textile">Textile Engineering</string>
    <string name="electronics">Electronics Engineering</string>
    <string name="computer">Computer Engineering</string>
    <string name="it">Information Technology</string>
    <string name="extc">Electronics and Telecommunication Engineering</string>

    <string name="prompt_department">Department</string>
    <string name="physics_dept">Physics Department</string>
    <string name="computer_dept">Computer Department</string>
    <string name="electrical_dept">Electrical Department</string>
    <string name="mechanical_dept">Mechanical Department</string>
    <string name="chemistry_dept">Technical and Applied Chemistry</string>
    <string name="civil_dept">Structural Engineering Department</string>
    <string name="textile_dept">Textile Department</string>
    <string name="mathematics_dept">Mathematics Department</string>

    <string name="prompt_teacher">Teacher</string>
    <string name="prompt_lecture">Add Lecture</string>
    <string name="prompt_classroom">Classroom</string>

    <string name="show_today">Today</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_start_time">Start Time</string>
    <string name="prompt_end_time">End Time</string>
    <string name="prompt_time">Time</string>

    <string name="prompt_old_password">Previous Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_change_password">Change Password</string>

    <string name="prompt_subject">Subject</string>
    <string name="prompt_start_date">Start Date</string>
    <string name="prompt_end_date">End Date</string>
    <string name="prompt_show_attendance">Show Attendance</string>
    <string name="prompt_present_students">Present Students</string>
</resources>
